--- a/ITF19019_eksamen2023/oppgave2/eksamen_oppgave2.html
+++ b/ITF19019_eksamen2023/oppgave2/eksamen_oppgave2.html
@@ -52,6 +52,7 @@
         // Kommentar: Denne funksjonen tegner en sirkel på canvas.
 
         // C-krav
+        // Kilde: https://www.w3schools.com/js/js_random.asp
         function randomMinMax(min, max) {
             return Math.floor(Math.random() * (max - min + 1) + min)
         }
