--- a/ITF19019_eksamen2023/oppgave2/eksamen_oppgave2.html
+++ b/ITF19019_eksamen2023/oppgave2/eksamen_oppgave2.html
@@ -20,6 +20,7 @@
                 <li>Total: <span id="totalCount">0</span></li>
             </ul>
             <!-- A-krav: -->
+            <!-- Kilde: Fått hjelp av Nikolai Lysebraate, student ved HiOF, 1.året Informasjonssystemer til å forstå utførelsen av oppgaven -->
             <!-- Kommentar: ID-ene "runTime" og "avarageElement" viser verdier dynamisk som blir oppdatert ved hjelp av JavaScript -->
             <h2>Activity</h2>
             <p>User has been active for <span id ="runTime">0</span> seconds, which is <span id ="avarageElement">0</span> elements per second</p>
