--- a/ITF19019_eksamen2023/oppgave3/register.html
+++ b/ITF19019_eksamen2023/oppgave3/register.html
@@ -82,6 +82,7 @@
         let departments = ["Administration", "Human Resources", "Production", "Finances"]
 
         // E-krav:
+        // Kilde: Fått hjelp av Nikolai Lysebraate, student ved HiOF, 1.året Informasjonssystemer til å forstå utførelsen av oppgaven -->
         function printStaff() {
             let staffList = document.getElementById("staffList")
             staffList.textContent = ""
