--- a/ITF19019_eksamen2023/oppgave3/register.html
+++ b/ITF19019_eksamen2023/oppgave3/register.html
@@ -63,6 +63,7 @@
                 <p>
                     <label for="newDepartment">Department</label><input type="text" name="newDepartment" id="newDepartment" placeholder="Department" />
                 </p>
+                 <!-- Lagt til onClick --> 
                 <button id="saveDepartment" onClick="newDepartment()">Save new department</button>
             </div>
         </section>
