--- a/ITF19019_eksamen2023/oppgave3/register.html
+++ b/ITF19019_eksamen2023/oppgave3/register.html
@@ -48,7 +48,7 @@
                 <p>
                     <label for="email">Email address</label><input type="email" name="email" id="email" placeholder="you@email.com" /></select>
                 </p>
-                <!-- Lagt til onClick -->
+                <!-- Lagt til onClick --> <!-- Kilde:https://www.w3schools.com/jsref/event_onclick.asp-->
                 <button id="saveStaff" onClick="newStaff()">Save staff member</button>
             </div>
             <div class="form">
@@ -63,7 +63,7 @@
                 <p>
                     <label for="newDepartment">Department</label><input type="text" name="newDepartment" id="newDepartment" placeholder="Department" />
                 </p>
-                 <!-- Lagt til onClick --> 
+                 <!-- Lagt til onClick --> <!-- Kilde:https://www.w3schools.com/jsref/event_onclick.asp-->
                 <button id="saveDepartment" onClick="newDepartment()">Save new department</button>
             </div>
         </section>
